--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,19 +6,29 @@
     "dev": "ts-node-dev --respawn --transpile-only src/main.ts",
     "start": "node dist/main.js",
     "build": "tsc -p tsconfig.json",
-    "test": "echo 'no tests yet'",
+    "test": "pnpm exec prisma migrate deploy --schema ./prisma/schema.prisma && pnpm exec ts-node ./test/integration.test.ts",
     "lint": "eslint 'src/**/*.ts'",
-    "format": "prettier --write 'src/**/*.ts'"
+    "format": "prettier --write 'src/**/*.ts'",
+    "prisma:migrate": "pnpm exec prisma migrate dev --name init --schema ./prisma/schema.prisma",
+    "prisma:generate": "pnpm exec prisma generate --schema ./prisma/schema.prisma",
+    "prisma:seed": "pnpm exec prisma db seed --schema ./prisma/schema.prisma"
   },
   "dependencies": {
     "@nestjs/common": "10.3.7",
     "@nestjs/core": "10.3.7",
     "@nestjs/platform-express": "10.3.7",
+    "@prisma/client": "5.21.1",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.8.1"
   },
   "devDependencies": {
+    "@types/node": "20.14.12",
+    "prisma": "5.21.1",
+    "ts-node": "10.9.2",
     "ts-node-dev": "2.0.0",
     "typescript": "5.4.5"
+  },
+  "prisma": {
+    "seed": "ts-node --project tsconfig.json prisma/seed.ts"
   }
 }
