--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -18,12 +18,16 @@
     "@nestjs/core": "10.3.7",
     "@nestjs/platform-express": "10.3.7",
     "@prisma/client": "5.21.1",
+    "jsonwebtoken": "9.0.2",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.8.1"
   },
   "devDependencies": {
     "@types/node": "20.14.12",
+    "@types/jsonwebtoken": "9.0.6",
+    "@types/supertest": "2.0.16",
     "prisma": "5.21.1",
+    "supertest": "6.3.4",
     "ts-node": "10.9.2",
     "ts-node-dev": "2.0.0",
     "typescript": "5.4.5"
