--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,6 +14,7 @@
     "prisma:seed": "pnpm exec prisma db seed --schema ./prisma/schema.prisma"
   },
   "dependencies": {
+    "@surplus/audit": "workspace:*",
     "@nestjs/common": "10.3.7",
     "@nestjs/core": "10.3.7",
     "@nestjs/platform-express": "10.3.7",
