--- a/packages/audit/package.json
+++ b/packages/audit/package.json
@@ -2,8 +2,8 @@
   "name": "@surplus/audit",
   "version": "0.1.0",
   "private": true,
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "src/index.ts",
+  "types": "src/index.ts",
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "dev": "tsc -w -p tsconfig.json",
@@ -11,7 +11,9 @@
     "lint": "eslint 'src/**/*.ts'",
     "format": "prettier --write 'src/**/*.ts'"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@prisma/client": "5.21.1"
+  },
   "devDependencies": {
     "typescript": "5.4.5"
   }
