--- a/packages/rules/package.json
+++ b/packages/rules/package.json
@@ -7,12 +7,17 @@
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "dev": "tsc -w -p tsconfig.json",
-    "test": "echo 'no tests yet'",
+    "test": "vitest run",
     "lint": "eslint 'src/**/*.ts'",
     "format": "prettier --write 'src/**/*.ts'"
   },
-  "dependencies": {},
+  "dependencies": {
+    "js-yaml": "4.1.0",
+    "zod": "3.23.8"
+  },
   "devDependencies": {
-    "typescript": "5.4.5"
+    "@types/node": "20.12.12",
+    "typescript": "5.4.5",
+    "vitest": "1.5.3"
   }
 }
