Add scrapyd watch-mode scraper service

--- a/services/scraper/pyproject.toml
+++ b/services/scraper/pyproject.toml
@@ -12,3 +12,7 @@ readme = "README.md"
 
 [tool.setuptools.packages.find]
 where = ["."]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+pythonpath = ["."]
