--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -19,6 +19,7 @@
     "@nestjs/core": "10.3.7",
     "@nestjs/platform-express": "10.3.7",
     "@prisma/client": "5.21.1",
+    "@surplus/connectors": "workspace:*",
     "@surplus/rules": "workspace:*",
     "jsonwebtoken": "9.0.2",
     "reflect-metadata": "0.1.13",
