--- a/packages/connectors/package.json
+++ b/packages/connectors/package.json
@@ -7,12 +7,16 @@
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "dev": "tsc -w -p tsconfig.json",
-    "test": "echo 'no tests yet'",
+    "test": "vitest run",
     "lint": "eslint 'src/**/*.ts'",
     "format": "prettier --write 'src/**/*.ts'"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@surplus/shared": "workspace:*"
+  },
   "devDependencies": {
-    "typescript": "5.4.5"
+    "@types/node": "20.14.12",
+    "typescript": "5.4.5",
+    "vitest": "1.5.3"
   }
 }
