--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@surplus/audit": "workspace:*",
+    "@surplus/shared": "workspace:*",
     "@nestjs/common": "10.3.7",
     "@nestjs/core": "10.3.7",
     "@nestjs/platform-express": "10.3.7",
