--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -14,7 +14,9 @@
     "@nestjs/common": "10.3.7",
     "@nestjs/core": "10.3.7",
     "@nestjs/platform-express": "10.3.7",
+    "@prisma/client": "5.21.1",
     "@surplus/connectors": "workspace:*",
+    "@surplus/shared": "workspace:*",
     "bullmq": "5.7.8",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.8.1"
