--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,22 +14,23 @@
     "prisma:seed": "pnpm exec prisma db seed --schema ./prisma/schema.prisma"
   },
   "dependencies": {
-    "@surplus/audit": "workspace:*",
-    "@surplus/shared": "workspace:*",
     "@nestjs/common": "10.3.7",
     "@nestjs/core": "10.3.7",
     "@nestjs/platform-express": "10.3.7",
     "@prisma/client": "5.21.1",
+    "@surplus/audit": "workspace:*",
     "@surplus/connectors": "workspace:*",
     "@surplus/rules": "workspace:*",
+    "@surplus/shared": "workspace:*",
+    "adm-zip": "^0.5.16",
     "jsonwebtoken": "9.0.2",
     "pdfkit": "0.15.0",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.8.1"
   },
   "devDependencies": {
-    "@types/node": "20.14.12",
     "@types/jsonwebtoken": "9.0.6",
+    "@types/node": "20.14.12",
     "@types/supertest": "2.0.16",
     "prisma": "5.21.1",
     "supertest": "6.3.4",
