--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,10 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "echo 'no tests yet'",
+    "test": "node ./test/legal-safety.test.js",
     "format": "prettier --write 'src/**/*.{ts,tsx}'"
   },
   "dependencies": {
+    "@surplus/shared": "workspace:*",
     "next": "14.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
