--- a/packages/connectors/package.json
+++ b/packages/connectors/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -p tsconfig.json",
     "dev": "tsc -w -p tsconfig.json",
     "test": "vitest run",
-    "lint": "eslint 'src/**/*.ts'",
+    "lint": "pnpm --filter @surplus/shared --workspace-root build && eslint 'src/**/*.ts'",
     "format": "prettier --write 'src/**/*.ts'"
   },
   "dependencies": {
