--- a/packages/rules/package.json
+++ b/packages/rules/package.json
@@ -16,6 +16,7 @@
     "zod": "3.23.8"
   },
   "devDependencies": {
+    "@types/js-yaml": "4.0.9",
     "@types/node": "20.12.12",
     "typescript": "5.4.5",
     "vitest": "1.5.3"
