--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,10 +1,16 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "baseUrl": "./src",
+    "baseUrl": ".",
     "rootDir": ".",
     "types": ["node"],
-    "noImplicitAny": false
+    "noImplicitAny": false,
+    "paths": {
+      "@surplus/shared": ["../../packages/shared/src"],
+      "@surplus/rules": ["../../packages/rules/src"],
+      "@surplus/connectors": ["../../packages/connectors/src"],
+      "@surplus/audit": ["../../packages/audit/src"]
+    }
   },
   "include": ["src/**/*", "prisma/**/*", "test/**/*"],
   "exclude": ["node_modules", "dist"]
