--- a/packages/connectors/tsconfig.json
+++ b/packages/connectors/tsconfig.json
@@ -4,7 +4,10 @@
     "rootDir": "./src",
     "outDir": "dist",
     "declaration": true,
-    "lib": ["ES2020", "DOM"]
+    "lib": ["ES2020", "DOM"],
+    "paths": {
+      "@surplus/shared": ["../shared/dist"]
+    }
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
