--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,17 +1,23 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "baseUrl": ".",
-    "rootDir": ".",
-    "types": ["node"],
-    "noImplicitAny": false,
+    "baseUrl": "./src",
+    "rootDir": "../../",
     "paths": {
-      "@surplus/shared": ["../../packages/shared/src"],
-      "@surplus/rules": ["../../packages/rules/src"],
-      "@surplus/connectors": ["../../packages/connectors/src"],
-      "@surplus/audit": ["../../packages/audit/src"]
+      "@surplus/shared": ["packages/shared/src"],
+      "@surplus/rules": ["packages/rules/src"],
+      "@surplus/connectors": ["packages/connectors/src"],
+      "@surplus/audit": ["packages/audit/src"]
     }
   },
-  "include": ["src/**/*", "prisma/**/*", "test/**/*"],
+  "include": [
+    "src/**/*",
+    "prisma/**/*",
+    "test/**/*",
+    "../../packages/shared/src/**/*",
+    "../../packages/rules/src/**/*",
+    "../../packages/connectors/src/**/*",
+    "../../packages/audit/src/**/*"
+  ],
   "exclude": ["node_modules", "dist"]
 }
