--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "pnpm -r format"
   },
   "devDependencies": {
+    "@types/node": "20.14.12",
     "@typescript-eslint/eslint-plugin": "6.21.0",
     "@typescript-eslint/parser": "6.21.0",
     "eslint": "8.56.0",
