--- a/packages/rules/package.json
+++ b/packages/rules/package.json
@@ -2,8 +2,15 @@
   "name": "@surplus/rules",
   "version": "0.1.0",
   "private": true,
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "require": "./dist/index.js",
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "dev": "tsc -w -p tsconfig.json",
@@ -16,6 +23,7 @@
     "zod": "3.23.8"
   },
   "devDependencies": {
+    "@types/js-yaml": "4.0.9",
     "@types/node": "20.12.12",
     "typescript": "5.4.5",
     "vitest": "1.5.3"
