--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,16 +1,17 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "outDir": "dist",
+    "target": "ES2022",
+    "module": "CommonJS",
+    "moduleResolution": "Node",
     "strict": true,
-    "esModuleInterop": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "forceConsistentCasingInFileNames": true,
+    "noImplicitAny": true,
     "skipLibCheck": true,
-    "sourceMap": true,
-    "rootDir": "src"
+    "baseUrl": ".",
+    "paths": {
+      "@surplus/shared": ["packages/shared/src"],
+      "@surplus/rules": ["packages/rules/src"],
+      "@surplus/connectors": ["packages/connectors/src"],
+      "@surplus/audit": ["packages/audit/src"]
+    }
   }
 }
