--- a/packages/audit/tsconfig.json
+++ b/packages/audit/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "rootDir": "./src",
-    "outDir": "dist",
+    "composite": true,
     "declaration": true,
-    "types": ["node"],
-    "noImplicitAny": false
+    "declarationMap": true,
+    "outDir": "dist",
+    "rootDir": "src"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
