Refactor tsconfig.json for composite build setup

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,21 +1,18 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "baseUrl": ".",
-    "rootDir": "../..",
-    "types": ["node"],
-    "noImplicitAny": false,
-    "paths": {
-      "@surplus/shared": ["../../packages/shared/src/index.ts"],
-      "@surplus/shared/*": ["../../packages/shared/src/*"],
-      "@surplus/rules": ["../../packages/rules/src/index.ts"],
-      "@surplus/rules/*": ["../../packages/rules/src/*"],
-      "@surplus/connectors": ["../../packages/connectors/src/index.ts"],
-      "@surplus/connectors/*": ["../../packages/connectors/src/*"],
-      "@surplus/audit": ["../../packages/audit/src/index.ts"],
-      "@surplus/audit/*": ["../../packages/audit/src/*"]
-    }
+    "composite": true,
+    "outDir": "dist"
   },
-  "include": ["src/**/*", "prisma/**/*", "test/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "references": [
+    { "path": "../../packages/shared" },
+    { "path": "../../packages/rules" },
+    { "path": "../../packages/connectors" },
+    { "path": "../../packages/audit" }
+  ],
+  "include": [
+    "src/**/*",
+    "prisma/**/*",
+    "test/**/*"
+  ]
 }
