--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -23,13 +23,17 @@
     "@surplus/rules": "workspace:*",
     "@surplus/shared": "workspace:*",
     "adm-zip": "^0.5.16",
+    "express": "^5.2.1",
     "jsonwebtoken": "9.0.2",
+    "multer": "^2.0.2",
     "pdfkit": "0.15.0",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.8.1"
   },
   "devDependencies": {
+    "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "9.0.6",
+    "@types/multer": "^2.0.0",
     "@types/node": "20.14.12",
     "@types/supertest": "2.0.16",
     "prisma": "5.21.1",
