--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,8 +1,20 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "baseUrl": "./src"
+    "baseUrl": ".",
+    "rootDir": "./",
+    "typeRoots": ["./types", "./node_modules/@types"],
+    "paths": {
+      "@surplus/rules": ["./types/shims"],
+      "@surplus/shared": ["./types/shims"],
+      "@surplus/connectors": ["./types/shims"],
+      "@surplus/audit": ["./types/shims"],
+      "@prisma/client": ["./types/shims"]
+    },
+    "strict": false,
+    "noImplicitAny": false,
+    "skipLibCheck": true
   },
-  "include": ["src/**/*", "prisma/**/*", "test/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["src/**/*", "types/**/*"],
+  "exclude": ["node_modules", "dist", "prisma/**/*", "test/**/*"]
 }
