--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -15,6 +15,7 @@
     "@nestjs/core": "10.3.7",
     "@nestjs/platform-express": "10.3.7",
     "@prisma/client": "5.21.1",
+    "@surplus/audit": "workspace:*",
     "@surplus/connectors": "workspace:*",
     "@surplus/shared": "workspace:*",
     "bullmq": "5.7.8",
