--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "dev": "pnpm -r --filter './apps/**' dev",
     "test": "pnpm -r test",
     "lint": "pnpm -r lint",
-    "format": "pnpm -r format"
+    "format": "pnpm -r format",
+    "build:web": "pnpm --filter @surplus/web build",
+    "dev:web": "pnpm --filter @surplus/web dev",
+    "lint:web": "pnpm --filter @surplus/web lint",
+    "test:web": "pnpm --filter @surplus/web test"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "6.21.0",
