--- a/.github/workflows/web-vercel-build-check.yml
+++ b/.github/workflows/web-vercel-build-check.yml
@@ -19,11 +19,11 @@ jobs:
           node-version: 20
           cache: pnpm
 
-      - name: Enable Corepack
-        run: corepack enable
-
-      - name: Show pnpm version
-        run: pnpm --version
+      - name: Enable Corepack and pnpm
+        run: |
+          corepack enable
+          corepack prepare pnpm@9.12.3 --activate
+          pnpm -v
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
