--- a/.github/workflows/web-vercel-build-check.yml
+++ b/.github/workflows/web-vercel-build-check.yml
@@ -17,14 +17,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: 9.15.1
-          run_install: false
-          cache: true
-          cache-dependency-path: pnpm-lock.yaml
+          cache: pnpm
 
       - name: Enable Corepack
         run: corepack enable
