--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,6 +49,9 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile=false
 
+      - name: Generate Prisma client
+        run: pnpm run prisma:generate
+
       - name: Lint
         run: pnpm lint
 
