--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,12 +62,13 @@ jobs:
           pnpm exec tsc -p apps/web/tsconfig.json --noEmit
 
       - name: Run migrations
-        if: env.DATABASE_URL != ''
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main' && env.DATABASE_URL != ''
         run: |
-          if [ -f apps/api/prisma/schema.prisma ]; then
-            pnpm --filter @surplus/api exec prisma migrate deploy --schema apps/api/prisma/schema.prisma
+          SCHEMA_PATH="apps/api/prisma/schema.prisma"
+          if [ -f "$SCHEMA_PATH" ] && [ -n "${DATABASE_URL:-}" ]; then
+            pnpm --filter @surplus/api exec prisma migrate deploy --schema "$SCHEMA_PATH"
           else
-            echo "Schema file not found at apps/api/prisma/schema.prisma; skipping migrations."
+            echo "Skipping migrations (missing DATABASE_URL or schema at $SCHEMA_PATH)."
           fi
 
       - name: Tests
