--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,7 +6,8 @@
     "dev": "ts-node-dev --respawn --transpile-only src/main.ts",
     "start": "node dist/main.js",
     "build": "tsc -p tsconfig.json",
-    "test": "pnpm exec ts-node ./test/legal-safety.test.ts && node ../../scripts/prisma-migrate-if-db.js && pnpm exec ts-node ./test/fee-calculator.test.ts && pnpm exec ts-node ./test/integration.test.ts",
+    "pretest": "pnpm exec prisma generate --schema ./prisma/schema.prisma",
+    "test": "pnpm exec ts-node ./test/legal-safety.test.ts && node ../../scripts/prisma-migrate-if-db.js && pnpm exec ts-node ./test/fee-calculator.test.ts && node ../../scripts/run-integration-if-db.js",
     "lint": "eslint 'src/**/*.ts'",
     "format": "prettier --write 'src/**/*.ts'",
     "prisma:migrate": "pnpm exec prisma migrate dev --name init --schema ./prisma/schema.prisma",
