--- a/apps/worker/tsconfig.json
+++ b/apps/worker/tsconfig.json
@@ -1,8 +1,16 @@
 {
-  "extends": "../../tsconfig.base.json",
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "baseUrl": "./src"
+    "rootDir": "./src",
+    "outDir": "./dist",
+    "baseUrl": "./src",
+    "paths": {
+      "@prisma/client": ["./types/prisma-client"],
+      "@surplus/audit": ["./types/audit"],
+      "@surplus/shared": ["./types/shared"],
+      "@surplus/connectors": ["./types/connectors"]
+    }
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.spec.ts"]
 }
