--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -4,6 +4,9 @@
     "jsx": "preserve",
     "allowJs": true,
     "noEmit": true,
+    "rootDir": "./src",
+    "baseUrl": "./src",
+    "strict": false,
     "lib": [
       "dom",
       "dom.iterable",
@@ -15,11 +18,12 @@
   },
   "include": [
     "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx"
+    "src/**/*.ts",
+    "src/**/*.tsx"
   ],
   "exclude": [
     "node_modules",
-    "dist"
+    "dist",
+    "src/pages/cases.tsx"
   ]
 }
