--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -3,14 +3,12 @@
     "target": "ES2020",
     "module": "commonjs",
     "moduleResolution": "node",
-    "outDir": "dist",
     "strict": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
-    "sourceMap": true,
-    "rootDir": "src"
+    "sourceMap": true
   }
 }
