--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -4,7 +4,7 @@
     "jsx": "preserve",
     "allowJs": true,
     "noEmit": true,
-    "rootDir": "./src",
+    "rootDir": ".",
     "baseUrl": "./src",
     "strict": false,
     "lib": [
