--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -17,9 +17,9 @@
     "isolatedModules": true
   },
   "include": [
-    "next-env.d.ts",
-    "src/**/*.ts",
-    "src/**/*.tsx"
+    "./next-env.d.ts",
+    "./src/**/*.ts",
+    "./src/**/*.tsx"
   ],
   "exclude": [
     "node_modules",
