Fix CI: standardize prisma schema path

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev:web": "pnpm --filter @surplus/web dev",
     "lint:web": "pnpm --filter @surplus/web lint",
     "test:web": "pnpm --filter @surplus/web test",
-    "check:ci": "pnpm lint && pnpm exec tsc -p apps/api/tsconfig.json --noEmit && pnpm exec tsc -p apps/worker/tsconfig.json --noEmit && pnpm exec tsc -p apps/web/tsconfig.json --noEmit && pnpm --filter @surplus/api exec prisma migrate deploy --schema ./prisma/schema.prisma && pnpm test && pnpm -r --filter './apps/**' build"
+    "check:ci": "pnpm lint && pnpm exec tsc -p apps/api/tsconfig.json --noEmit && pnpm exec tsc -p apps/worker/tsconfig.json --noEmit && pnpm exec tsc -p apps/web/tsconfig.json --noEmit && pnpm --dir apps/api exec prisma migrate deploy --schema ./prisma/schema.prisma && pnpm test && pnpm -r --filter './apps/**' build"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "6.21.0",
