--- a/apps/worker/tsconfig.json
+++ b/apps/worker/tsconfig.json
@@ -11,6 +11,6 @@
       "@surplus/connectors": ["./types/connectors"]
     }
   },
-  "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.spec.ts"]
+  "include": ["./src/**/*"],
+  "exclude": ["node_modules", "dist", "**/*.test.*", "**/*.spec.*"]
 }
