--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
       DATABASE_URL: postgres://surplus:surplus@localhost:5432/surplus
       JWT_ACCESS_SECRET: test-secret
       NODE_ENV: test
-      SCHEMA_PATH: ./prisma/schema.prisma
+      SCHEMA_PATH: apps/api/prisma/schema.prisma
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -58,34 +58,34 @@ jobs:
 
       - name: Prisma (pull request)
         if: github.event_name == 'pull_request'
-        working-directory: apps/api
         run: |
+          SCHEMA_PATH="apps/api/prisma/schema.prisma"
           echo "Checking Prisma schema at $(pwd)/$SCHEMA_PATH"
           if [ -f "$SCHEMA_PATH" ]; then
-            ls -la
-            ls -la prisma
+            ls -la apps/api
+            ls -la apps/api/prisma
             echo "Schema found; running generate and validate for PR checks."
             pnpm exec prisma generate --schema "$SCHEMA_PATH"
             pnpm exec prisma validate --schema "$SCHEMA_PATH"
           else
             echo "Schema not found at $SCHEMA_PATH; directory listing:" && ls -la
-            if [ -d prisma ]; then ls -la prisma; fi
+            if [ -d apps/api/prisma ]; then ls -la apps/api/prisma; fi
             exit 1
           fi
 
       - name: Run migrations (main)
         if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master')
-        working-directory: apps/api
         run: |
+          SCHEMA_PATH="apps/api/prisma/schema.prisma"
           echo "Checking Prisma schema at $(pwd)/$SCHEMA_PATH"
           if [ -f "$SCHEMA_PATH" ]; then
-            ls -la
-            ls -la prisma
+            ls -la apps/api
+            ls -la apps/api/prisma
             echo "Schema found; running migrate deploy on main."
             pnpm exec prisma migrate deploy --schema "$SCHEMA_PATH"
           else
             echo "Schema not found at $SCHEMA_PATH; directory listing:" && ls -la
-            if [ -d prisma ]; then ls -la prisma; fi
+            if [ -d apps/api/prisma ]; then ls -la apps/api/prisma; fi
             exit 1
           fi
 
