--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -10,7 +10,9 @@
     "lint": "eslint 'src/**/*.ts'",
     "format": "prettier --write 'src/**/*.ts'",
     "prisma:migrate": "pnpm exec prisma migrate dev --name init --schema ./prisma/schema.prisma",
-    "prisma:generate": "pnpm exec prisma generate --schema ./prisma/schema.prisma",
+    "prisma:validate": "prisma validate --schema ./prisma/schema.prisma",
+    "prisma:generate": "prisma generate --schema ./prisma/schema.prisma",
+    "prisma:migrate:deploy": "prisma migrate deploy --schema ./prisma/schema.prisma",
     "prisma:seed": "pnpm exec prisma db seed --schema ./prisma/schema.prisma"
   },
   "dependencies": {
