--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,8 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "eslint": "8.56.0",
+    "eslint-config-next": "14.1.4",
     "@types/node": "20.12.7",
     "@types/react": "18.2.66",
     "@types/react-dom": "18.2.22",
