--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -4,23 +4,8 @@
     "jsx": "preserve",
     "allowJs": true,
     "noEmit": true,
-    "rootDir": ".",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "incremental": true,
-    "resolveJsonModule": true,
-    "isolatedModules": true
+    "rootDir": "."
   },
-  "include": [
-    "next-env.d.ts",
-    "src/**/*.ts",
-    "src/**/*.tsx"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
+  "include": ["next-env.d.ts", "src/**/*.ts", "src/**/*.tsx"],
+  "exclude": ["node_modules", "dist", ".next"]
 }
