--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -9,13 +9,12 @@
       "@surplus/rules": ["./types/shims"],
       "@surplus/shared": ["./types/shims"],
       "@surplus/connectors": ["./types/shims"],
-      "@surplus/audit": ["./types/shims"],
-      "@prisma/client": ["./types/shims"]
+      "@surplus/audit": ["./types/shims"]
     },
     "strict": false,
     "noImplicitAny": false,
     "skipLibCheck": true
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "dist", "prisma/**/*", "test/**/*", "types/**/*"]
+  "exclude": ["node_modules", "dist"]
 }
