--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -13,10 +13,9 @@
     "prisma:validate": "pnpm exec prisma validate --schema ./prisma/schema.prisma",
     "prisma:generate": "pnpm exec prisma generate --schema ./prisma/schema.prisma",
     "prisma:db:push": "pnpm exec prisma db push --schema ./prisma/schema.prisma --accept-data-loss",
-    "prisma:studio": "pnpm exec prisma studio --schema ./prisma/schema.prisma",
     "prisma:seed": "pnpm exec prisma db seed --schema ./prisma/schema.prisma",
 
-    "test": "pnpm exec ts-node ./test/legal-safety.test.ts && pnpm run prisma:db:push && pnpm exec ts-node ./test/fee-calculator.test.ts && pnpm exec ts-node ./test/integration.test.ts"
+    "test": "pnpm exec ts-node --project ./tsconfig.test.json ./test/legal-safety.test.ts && pnpm run prisma:generate && pnpm run prisma:db:push && pnpm exec ts-node --project ./tsconfig.test.json ./test/fee-calculator.test.ts && pnpm exec ts-node --project ./tsconfig.test.json ./test/integration.test.ts"
   },
   "dependencies": {
     "@nestjs/common": "10.3.7",
@@ -48,6 +47,6 @@
     "typescript": "5.4.5"
   },
   "prisma": {
-    "seed": "ts-node --project tsconfig.json prisma/seed.ts"
+    "seed": "ts-node --project tsconfig.test.json prisma/seed.ts"
   }
 }
