--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -4,17 +4,15 @@
     "baseUrl": ".",
     "rootDir": "src",
     "outDir": "dist",
-    "typeRoots": ["./types", "./node_modules/@types"],
-    "paths": {
-      "@surplus/rules": ["./types/shims"],
-      "@surplus/shared": ["./types/shims"],
-      "@surplus/connectors": ["./types/shims"],
-      "@surplus/audit": ["./types/shims"]
-    },
-    "strict": false,
-    "noImplicitAny": false,
+
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+
+    "strict": true,
+    "noImplicitAny": true,
     "skipLibCheck": true
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "test/**/*", "prisma/**/*"]
 }
