--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -11,6 +11,7 @@
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
     "sourceMap": true,
-    "rootDir": "src"
+    "rootDir": "src",
+    "typeRoots": ["./types", "./node_modules/@types"]
   }
 }
