--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -7,12 +7,13 @@
 
     "moduleResolution": "node",
     "esModuleInterop": true,
-    "resolveJsonModule": true,
 
     "strict": true,
-    "noImplicitAny": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+
+    "types": ["node"],
+    "forceConsistentCasingInFileNames": true
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "dist", "test/**/*", "prisma/**/*"]
+  "exclude": ["node_modules", "dist", "prisma/**/*", "test/**/*", "types/**/*"]
 }
