--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -17,6 +17,7 @@
     "@nestjs/common": "10.3.7",
     "@nestjs/core": "10.3.7",
     "@nestjs/platform-express": "10.3.7",
+    "@nestjs/throttler": "4.0.0",
     "@prisma/client": "5.21.1",
     "@surplus/audit": "workspace:*",
     "@surplus/connectors": "workspace:*",
@@ -31,6 +32,7 @@
     "rxjs": "7.8.1"
   },
   "devDependencies": {
+    "@nestjs/testing": "10.3.7",
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "9.0.6",
     "@types/multer": "^2.0.0",
