--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build:web": "pnpm --filter @surplus/web build",
     "dev:web": "pnpm --filter @surplus/web dev",
     "lint:web": "pnpm --filter @surplus/web lint",
-    "test:web": "pnpm --filter @surplus/web test"
+    "test:web": "pnpm --filter @surplus/web test",
+    "postinstall": "pnpm --filter @surplus/api prisma:generate"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "6.21.0",
