--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -39,6 +39,7 @@
     "@types/jsonwebtoken": "9.0.6",
     "@types/multer": "^2.0.0",
     "@types/node": "20.14.12",
+    "@types/pdfkit": "^0.17.4",
     "@types/supertest": "2.0.16",
     "prisma": "5.21.1",
     "supertest": "6.3.4",
