chore(api): align test configuration

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,7 +6,7 @@
     "dev": "ts-node-dev --respawn --transpile-only src/main.ts",
     "start": "node dist/main.js",
     "build": "tsc -p tsconfig.json",
-    "test": "node ./test/run-tests.js",
+    "test": "TS_NODE_PROJECT=./tsconfig.test.json node ./test/run-tests.js",
     "lint": "eslint 'src/**/*.ts'",
     "format": "prettier --write 'src/**/*.ts'",
     "prisma:migrate": "pnpm exec prisma migrate deploy --schema ./prisma/schema.prisma",
