Enforce closure confirmation and jurisdiction gating

--- a/packages/connectors/package.json
+++ b/packages/connectors/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --write 'src/**/*.ts'"
   },
   "dependencies": {
+    "@surplus/rules": "workspace:*",
     "@surplus/shared": "workspace:*"
   },
   "devDependencies": {
