--- a/packages/rules/tsconfig.json
+++ b/packages/rules/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "outDir": "dist",
     "rootDir": "./src",
+    "declaration": true,
     "types": ["node"],
     "typeRoots": ["../../types", "./node_modules/@types"]
   },
