Fix api test determinism and schema drift

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,6 +68,7 @@ jobs:
       - name: Tests
         env:
           SKIP_PRISMA_DB_SETUP: "true"
+          RUN_API_INTEGRATION: "true"
         run: pnpm test
 
       - name: Build
